# FlowBrake

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: windows-ci.yml
crates/flowbrake-core/: Cargo.toml
crates/flowbrake-core/src/: lib.rs
crates/flowbrake-ui/: Cargo.toml  build.rs
crates/flowbrake-ui/src/: main.rs  process_search.rs  settings.rs  window_chrome.rs
crates/flowbrake-ui/ui/: main.slint  widgets.slint  window_chrome.slint
crates/flowbrake-windows/: Cargo.toml
crates/flowbrake-windows/src/: elevation.rs  engine.rs  ip_helper.rs  lib.rs  packet.rs  process.rs  system.rs  tcp.rs  windivert.rs
scripts/: package-windows.ps1
