[package]
name = "flowbrake-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
flowbrake-core = { path = "../flowbrake-core" }
flowbrake-windows = { path = "../flowbrake-windows" }
raw-window-handle = "0.6"
slint = { version = "1", features = ["raw-window-handle-06"] }
tray-icon = { version = "0.24.0", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1"
