[package]
name = "flowbrake-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
libloading = "0.8"
flowbrake-core = { path = "../flowbrake-core" }
thiserror = "2"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
